# GF2_sample

./: CMakeLists.txt  DFGF2Solver.cpp  DFGF2Solver.h  DFIntegral.h  GF2Solver.h  JobsQueue.cpp  JobsQueue.h  SimpleGF2Job.h  Timing.h  base_integral.h  main.cpp  tobe_optimized.cpp
data/: input.h5  output.h5
data/H2/: df_int.h5  input.h5  output.h5
